# Physica

./: CMakeLists.txt  Physica.cpp  Physica.h  PhysicaConfig.cmake  README.md
AI/: CMakeLists.txt
AI/Header/: DNN.h  Layer.h  Node.h  PhysicaAI.h
AI/MachineLearning/DeepLearning/: DNN.cpp  Layer.cpp  Node.cpp
Core/: CMakeLists.txt  Const.cpp  Cube2D.cpp
Core/AI/MachineLearning/DeepLearning/: Layer.cpp  Net.cpp  Node.cpp
Core/Command/: ExprReader.cpp
Core/FEM/: Element.cpp  Geography.cpp
Core/Header/: AbstractNum.h  BasicCalculates.h  CStyleArray.h  CalcBasic.h  ClimbMountainAlgorithm.h  ColumnMatrix.h  ComplexInf.h  ComplexNum.h  ComplexNumeric.h  Const.h  Cube2D.h  CudaMatrix.cuh  Determinate.cuh  Differential.h  DirectedInf.h  Element.h  ElementaryFunction.h  ExprReader.h  FFT.h  Function.h  FunctionTree.h  GeneAlgorithm.h  Geography.h  HillClimbingAlgorithm.h  Indeterminate.h  Integrate.h  LUDecomposition.h  Layer.h  LinearEquations.h  Matrix.cuh  Matrix.h  MatrixChain.h  Net.h  Node.h  Number.h  Numerical.h  NumericalVector.h  Polynomial.h  RealInf.h  RealNum.h  (+9 more)
Core/Header/MultiPrecition/: ElementaryFunction.h  Scalar.h
Core/Header/MultiPrecition/ScalarImpl/: BasicCalc.h  MultiScalar.h
Core/Header/Utils/CStyleArray/: AbstractArray.h  CStyleArray.h  CStyleArrayImpl.h
Core/Interpreter/: ExprReader.cpp  KeyWordEngine.cpp  Token.cpp  Tokenizer.cpp
Core/Math/: Const.cpp  Function.cpp  Numerical.cpp
Core/Math/Algebra/: ComplexNumeric.cpp
Core/Math/Algebra/BasicAlgebra/: Polynomial.cpp  Solve.cpp
Core/Math/Algebra/LinearAlgebra/: LUDecomposition.cpp  LinearEquations.cpp  Matrix.cpp  MatrixChain.cpp  SquareMatrix.cpp  Vector.cpp
Core/Math/AxiomSystem/: AbstractNum.cpp  ComplexInf.cpp  ComplexNum.cpp  DirectedInf.cpp  Indeterminate.cpp  Number.cpp  RealInf.cpp  RealNum.cpp  RealNumber.cpp
Core/Math/BasicAlgebra/: BasicCalculates.cpp  ElementaryFunction.cpp  Polynomial.cpp  RealNumber.cpp  Solve.cpp
Core/Math/Calculus/: Differential.cpp  Function.cpp  FunctionTree.cpp  Integrate.cpp
Core/Math/FEM/: Element.cpp  Geography.cpp
Core/Math/LinearAlgebra/: CudaMatrix.cu  Determinate.cu  LinearEquations.cu  Matrix.cpp  Matrix.cu  NumericalVector.cpp  Vector.cpp
Core/Math/Optimization/: ClimbMountainAlgorithm.cpp  GeneAlgorithm.cpp  HillClimbingAlgorithm.cpp
Core/Math/Transforms/: FFT.cpp
Core/MultiPrecision/: ElementaryFunction.cpp  Scalar.cpp
Core/MultiPrecision/Basic/: DivBasic.h  MulBasic.h  SubBasic.h
Core/MultiplePrecision/: ArraySupport.h  Bitwise.h  CalcBasic.cpp  CalcBasic.h  DivBasic.h  ElementaryFunction.cpp  MulBasic.h  Numerical.cpp  ReadMe  Scalar.cpp
Core/MultiplePrecision/Basic/: AddBasic.h  DivBasic.h  MulBasic.h  SubBasic.h
Core/MultiplePrecision/Operation/: Pow.h
Core/MultiplePrecision/Util/: ArraySupport.h  Bitwise.h
Gui/: CMakeLists.txt  Calculator.cpp  MainWindow.cpp  PhysicaMain.cpp  Plot.cpp  Settings.cpp
Gui/Editor/: EditorMain.cpp  LineNumberArea.cpp
Gui/Header/: Calculator.h  CubePlayer.h  EditorMain.h  GlobalStyle.h  LineNumberArea.h  MainWindow.h  PhysicaMain.h  Plot.h  Plotter.h  Settings.h  SettingsPage.h
Gui/InT/: LongtonAnt.cpp
Gui/Menu/: Calculator.cpp  Settings.cpp  SettingsPage.cpp
Gui/Menu/InT/: LongtonAnt.cpp
Gui/OpenGL/: CubePlayer.cpp  Plotter.cpp
Gui/Resources/Shader/: cubePlayerVS.glsl
Interpreter/: CMakeLists.txt  ExprReader.cpp  KeyWordEngine.cpp  Token.cpp  Tokenizer.cpp
Interpreter/Header/: AbstractTokenizer.h  ExprReader.h  KeyWordEngine.h  Token.h  TokenNum.h  TokenWord.h  Tokenizer.h  TokenizerNum.h  TokenizerWord.h
Interpreter/TokenAnalizer/: Token.cpp  Tokenizer.cpp  TokenizerNum.cpp  TokenizerWord.cpp
Interpreter/TokenAnalizer/Tokens/: Token.cpp  TokenNum.cpp  TokenWord.cpp
Test/: CMakeLists.txt  CheckGPU.cu  ConstTest.cpp  ConstTest.h  ElementaryFunctionTest.cpp  ElementaryFunctionTest.h  NumericalTest.cpp  NumericalTest.h  PhysicaTests.h  ReadMe  SimpleNet.cpp  Test.cpp
Test/Header/: NumericalTest.h  PhysicaTests.h
src/: CMakeLists.txt
src/AI/: CMakeLists.txt  Metrics.cpp  RegressionDataset.cpp
src/AI/MachineLearning/DeepLearning/: DNN.cpp  Layer.cpp  Node.cpp
src/Core/: CMakeLists.txt  PhysicaInit.cpp
src/Core/IO/: Gnuplot.cpp  Poscar.cpp  Xdatcar.cpp
src/Core/Logger/: Cycler.cpp  Logger.cpp  LoggerRuntime.cpp
src/Core/Math/: Const.cpp
src/Core/Math/Algebra/: ComplexNumeric.cpp
src/Core/Math/AxiomSystem/: AbstractNum.cpp  ComplexInf.cpp  ComplexNum.cpp  DirectedInf.cpp  Indeterminate.cpp  RealInf.cpp  RealNum.cpp
src/Core/Math/Calculus/: Differential.cpp  Function.cpp  FunctionTree.cpp  Integrate.cpp
src/Core/Math/Discrete/: Combination.cpp
src/Core/Math/NumberTheory/: NumberTheory.cpp
src/Core/Math/Optimization/: GeneAlgorithm.cpp  HillClimbingAlgorithm.cpp  LinearProgramming.cpp
src/Core/Math/Transforms/: FFT.cpp
src/Core/MultiPrecision/: ComplexScalar.cpp  Const.cpp  ElementaryFunction.cpp  Integer.cpp  Rational.cpp  Scalar.cpp
src/Core/MultiPrecision/Basic/: AddBasic.h  DivBasic.h  SubBasic.h
src/Core/MultiPrecision/IntegerImpl/: ElementaryFunction.cpp
src/Core/MultiPrecision/ScalarImpl/: ScalarAddSubExpression.cpp
src/Core/Parallel/: ThreadPool.cpp
src/Core/Physics/: TotalCircuit.cpp
src/Core/Physics/ElectronStructure/: CrystalCell.cpp  ElectronConfig.cpp  ReciprocalCell.cpp
src/Core/Utils/: BitArray.cpp
src/Gui/: CMakeLists.txt  PhysicaMain.cpp  Plot.cpp
src/Gui/Editor/: EditorMain.cpp  LineNumberArea.cpp
src/Gui/Menu/: Calculator.cpp  Settings.cpp  SettingsPage.cpp
src/Gui/Menu/InT/: LongtonAnt.cpp
src/Gui/Plot/: DensityPlot.cpp  Plot.cpp  Plot3D.cpp  PolarPlot.cpp
src/Gui/Resources/: resource.qrc
src/Interpreter/: CMakeLists.txt  ExprReader.cpp
src/Interpreter/TokenAnalizer/: Tokenizer.cpp
src/Logger/: AbstractLogger.cpp  CMakeLists.txt  LogBuffer.cpp  Logger.cpp  LoggerRuntime.cpp  LoggerTimer.cpp
src/Logger/Logger/: AbstractLogger.cpp  FileLogger.cpp  StdLogger.cpp  StdoutLogger.cpp
src/Utils/: BitArray.cpp  CMakeLists.txt  Cycler.cpp  DirStack.cpp  Random.cpp  RingBuffer.cpp
(+597 files in other folders)
