#############################################Project##############################################
if(${PHYSICA_TORCH})
    add_subdirectory(AI)
endif()
add_subdirectory(Core)
if(${PHYSICA_GUI})
    add_subdirectory(Gui)
endif()
add_subdirectory(Interpreter)
add_subdirectory(Logger)
add_subdirectory(Utils)